# fipsagents-platform

./: .gitignore  .gitleaks.toml  CHANGELOG.md  Containerfile  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  pvc.yaml  route.yaml  service.yaml
docs/: api.md  architecture.md  deployment.md
scripts/: release.sh
src/fipsagents_platform/: __init__.py  __main__.py  app.py  auth.py  config.py  store_factory.py  version.py
src/fipsagents_platform/routes/: feedback.py  sessions.py  traces.py
tests/: conftest.py  test_feedback.py  test_health.py  test_sessions.py  test_traces.py
